--- a/build.gradle
+++ b/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.google.android.gms:play-services-base:10.0.1'
     compile 'com.google.android.gms:play-services-wearable:10.0.1'
+    compile 'com.google.android.support:wearable:2.0.0'
+    provided 'com.google.android.wearable:wearable:2.0.0'
 }
