--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,11 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
+    // Wearable 2.0 includes obsolete appcompat 23 library, which causes lint errors
+    // TODO Remove this exclusion ASAP
+    //noinspection GradleCompatible
+    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.google.android.gms:play-services-base:10.0.1'
     compile 'com.google.android.gms:play-services-wearable:10.0.1'
     compile 'com.google.android.support:wearable:2.0.0'
