--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     }
     compile 'com.android.support:percent:26.0.1'
 
+    compile 'com.android.support:wear:26.0.1'
     provided 'com.google.android.wearable:wearable:2.0.4'
 
     compile "android.arch.lifecycle:extensions:1.0.0-alpha9"
