--- a/build.gradle
+++ b/build.gradle
@@ -20,22 +20,20 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:26.0.1'
-    compile 'com.android.support:recyclerview-v7:26.0.1'
+    compile 'com.android.support:appcompat-v7:26.0.2'
+    compile 'com.android.support:recyclerview-v7:26.0.2'
 
     //Wearable support uses old percent version. Exclude it from wearable support group
     // and include it manually
-    compile('com.google.android.support:wearable:2.0.4') {
-        exclude module: 'percent'
-    }
-    compile 'com.android.support:percent:26.0.1'
+    compile('com.google.android.support:wearable:2.0.5')
+    compile 'com.android.support:percent:26.0.2'
 
-    compile 'com.android.support:wear:26.0.1'
-    provided 'com.google.android.wearable:wearable:2.0.4'
+    compile 'com.android.support:wear:26.0.2'
+    provided 'com.google.android.wearable:wearable:2.0.5'
 
     compile "android.arch.lifecycle:extensions:1.0.0-alpha9"
 
-    compile 'com.google.android.gms:play-services-wearable:11.2.0'
+    compile 'com.google.android.gms:play-services-wearable:11.2.2'
 }
 
 repositories {
