--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,9 @@ dependencies {
     compile 'com.android.support:wear:26.1.0'
     provided 'com.google.android.wearable:wearable:2.0.5'
 
-    compile "android.arch.lifecycle:extensions:1.0.0-beta1"
+    compile "android.arch.lifecycle:extensions:1.0.0-rc1"
 
-    compile 'com.google.android.gms:play-services-wearable:11.4.0'
+    compile 'com.google.android.gms:play-services-wearable:11.4.2'
 }
 
 repositories {
