--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:27.0.0'
     compile 'com.android.support:recyclerview-v7:27.0.0'
+    compile "com.android.support:preference-v7:27.0.0"
 
     // Wearable support uses old percent, media-compat and support-v4 version.
     // Manually override
