--- a/build.gradle
+++ b/build.gradle
@@ -19,23 +19,23 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:27.0.2'
-    compile 'com.android.support:recyclerview-v7:27.0.2'
-    compile "com.android.support:preference-v7:27.0.2"
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation "com.android.support:preference-v7:27.0.2"
 
     // Wearable support uses old percent, media-compat and support-v4 version.
     // Manually override
-    compile 'com.google.android.support:wearable:2.1.0'
-    compile 'com.android.support:percent:27.0.2'
-    compile 'com.android.support:support-media-compat:27.0.2'
-    compile 'com.android.support:support-v4:27.0.2'
+    implementation 'com.google.android.support:wearable:2.1.0'
+    implementation 'com.android.support:percent:27.0.2'
+    implementation 'com.android.support:support-media-compat:27.0.2'
+    implementation 'com.android.support:support-v4:27.0.2'
 
-    compile 'com.android.support:wear:27.0.2'
+    implementation 'com.android.support:wear:27.0.2'
     provided 'com.google.android.wearable:wearable:2.1.0'
 
-    compile 'android.arch.lifecycle:extensions:1.0.0'
+    implementation 'android.arch.lifecycle:extensions:1.0.0'
 
-    compile 'com.google.android.gms:play-services-wearable:11.6.2'
+    implementation 'com.google.android.gms:play-services-wearable:11.6.2'
 }
 
 repositories {
