--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation 'com.android.support:support-v4:27.0.2'
 
     implementation 'com.android.support:wear:27.0.2'
-    provided 'com.google.android.wearable:wearable:2.1.0'
+    compileOnly 'com.google.android.wearable:wearable:2.1.0'
 
     implementation 'android.arch.lifecycle:extensions:1.0.0'
 
