--- a/libs.toml
+++ b/libs.toml
@@ -16,6 +16,7 @@ robolectric = "4.6.1"
 
 [libraries]
 kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlin.coroutines" }
+kotlin-coroutines-playServices = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "kotlin.coroutines" }
 
 androidx-appCompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx.appCompat" }
 androidx-lifecycle-extensions = { module = "androidx.lifecycle:lifecycle-extensions", version.ref = "androidx.lifecycle" }
