--- a/libs.toml
+++ b/libs.toml
@@ -1,21 +1,22 @@
 [versions]
-kotlin-coroutines = "1.5.2"
+kotlin-coroutines = "1.6.4"
 
-androidx-appCompat = "1.3.1"
-androidx-lifecycle = "2.3.1"
-androidx-preference = "1.1.1"
+androidx-appCompat = "1.5.1"
+androidx-lifecycle = "2.5.1"
+androidx-preference = "1.2.0"
 androidx-recyclerView = "1.2.1"
-androidx-wear = "1.1.0"
+androidx-wear = "1.2.0"
 
-google-playServices-location = "18.0.0"
+google-playServices-location = "20.0.0"
 google-playServices-wearable = "17.1.0"
-google-wearableSupport = "2.8.1"
+google-wearableSupport = "2.9.0"
 
 junit4 = "4.13.2"
-robolectric = "4.6.1"
+robolectric = "4.8.2"
 
 [libraries]
 kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlin.coroutines" }
+kotlin-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlin.coroutines" }
 kotlin-coroutines-playServices = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "kotlin.coroutines" }
 
 androidx-appCompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx.appCompat" }
