--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 33
 
+    namespace = "com.matejdro.wearutils"
+
     defaultConfig {
         minSdkVersion 18
         targetSdkVersion 30
@@ -17,6 +19,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility = 17
+        targetCompatibility = 17
+    }
+}
+
+kotlin {
+    jvmToolchain(17)
 }
 
 dependencies {
