--- a/libs.toml
+++ b/libs.toml
@@ -1,5 +1,5 @@
 [versions]
-kotlin-coroutines = "1.6.4"
+kotlin-coroutines = "1.7.1"
 
 androidx-appCompat = "1.6.1"
 androidx-lifecycle = "2.6.1"
@@ -12,23 +12,23 @@ google-playServices-wearable = "18.0.0"
 google-wearableSupport = "2.9.0"
 
 junit4 = "4.13.2"
-robolectric = "4.9.2"
+robolectric = "4.10.3"
 
 [libraries]
-kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlin.coroutines" }
-kotlin-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlin.coroutines" }
-kotlin-coroutines-playServices = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "kotlin.coroutines" }
+kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlin-coroutines" }
+kotlin-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlin-coroutines" }
+kotlin-coroutines-playServices = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "kotlin-coroutines" }
 
-androidx-appCompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx.appCompat" }
-androidx-lifecycle-extensions = { module = "androidx.lifecycle:lifecycle-extensions", version.ref = "androidx.lifecycle" }
-androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime", version.ref = "androidx.lifecycle" }
-androidx-preference = { module = "androidx.preference:preference", version.ref = "androidx.preference" }
-androidx-recyclerView = { module = "androidx.recyclerview:recyclerview", version.ref = "androidx.recyclerView" }
-androidx-wear = { module = "androidx.wear:wear", version.ref = "androidx.wear" }
+androidx-appCompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appCompat" }
+androidx-lifecycle-extensions = { module = "androidx.lifecycle:lifecycle-extensions", version.ref = "androidx-lifecycle" }
+androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime", version.ref = "androidx-lifecycle" }
+androidx-preference = { module = "androidx.preference:preference", version.ref = "androidx-preference" }
+androidx-recyclerView = { module = "androidx.recyclerview:recyclerview", version.ref = "androidx-recyclerView" }
+androidx-wear = { module = "androidx.wear:wear", version.ref = "androidx-wear" }
 
-google-wearableSupport = { module = "com.google.android.support:wearable", version.ref = "google.wearableSupport" }
-google-playServices-location = { module = "com.google.android.gms:play-services-location", version.ref = "google.playServices.location" }
-google-playServices-wearable = { module = "com.google.android.gms:play-services-wearable", version.ref = "google.playServices.wearable" }
+google-wearableSupport = { module = "com.google.android.support:wearable", version.ref = "google-wearableSupport" }
+google-playServices-location = { module = "com.google.android.gms:play-services-location", version.ref = "google-playServices-location" }
+google-playServices-wearable = { module = "com.google.android.gms:play-services-wearable", version.ref = "google-playServices-wearable" }
 
 junit4 = { module = "junit:junit", version.ref = "junit4" }
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
