--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:tools="http://schemas.android.com/tools"
-    package="com.matejdro.wearutils">
+<manifest xmlns:tools="http://schemas.android.com/tools">
 
     <!-- WearUtils package is for both Android phones and Wear device, which only need MinSDK = 23.
         Ignore MinSDK warning, wear part will not be used on phones -->
