--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 33
+    namespace = "com.matejdro.wearutils"
 
     namespace = "com.matejdro.wearutils"
 
@@ -24,6 +25,10 @@ android {
         sourceCompatibility = 17
         targetCompatibility = 17
     }
+}
+
+kotlin {
+    jvmToolchain(17)
 }
 
 kotlin {
