--- a/libs.toml
+++ b/libs.toml
@@ -1,5 +1,6 @@
 [versions]
 kotlin-coroutines = "1.7.1"
+kotlinova = "3.2.0"
 
 androidx-appCompat = "1.6.1"
 androidx-lifecycle = "2.6.1"
@@ -18,6 +19,7 @@ robolectric = "4.10.3"
 kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlin-coroutines" }
 kotlin-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlin-coroutines" }
 kotlin-coroutines-playServices = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "kotlin-coroutines" }
+kotlinova-core = { module = "si.inova.kotlinova:core", version.ref = "kotlinova" }
 
 androidx-appCompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appCompat" }
 androidx-lifecycle-extensions = { module = "androidx.lifecycle:lifecycle-extensions", version.ref = "androidx-lifecycle" }
